--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-fetch": "^3.2.4"
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.11",
+    "https-proxy-agent": "^5.0.1",
+    "node-fetch": "^3.2.4",
+    "request": "^2.88.2"
   }
 }
