--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.11",
     "https-proxy-agent": "^5.0.1",
     "node-fetch": "^3.2.4",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sqlite3": "^5.0.8"
   }
 }
