Send data to endpoint

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "patent_scraper",
   "version": "1.0.0",
   "description": "",
-  "main": "test.js",
+  "main": "index.js",
   "scripts": {
+    "devStart": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,9 +12,13 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.11",
+    "express": "^4.18.1",
     "https-proxy-agent": "^5.0.1",
     "node-fetch": "^3.2.4",
     "request": "^2.88.2",
     "sqlite3": "^5.0.8"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
