--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.11",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "https-proxy-agent": "^5.0.1",
     "node-fetch": "^3.2.4",
